--- a/template/index.html
+++ b/template/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <script id="template-sidenav" type="text/x-handlebars-template">
-	<ul class="sidenav nav nav-list affix">
+	<ul class="sidenav nav nav-list">
 	{{#each nav}}
 		{{#if isHeader}}
 			{{#if isFixed}}
@@ -410,7 +410,6 @@
 	{{/if}}
 </script>
 
-<div id="border"></div>
 <div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span2">
