--- a/template/index.html
+++ b/template/index.html
@@ -120,42 +120,43 @@
 			<pre class="prettyprint language-json" data-type="json"><code>{{{content}}}</code></pre>
 		{{/each}}
 
-		{{subTemplate "article-param-block" params=article.parameter _title="Parameter" _hasType=_hasTypeInParameterFields}}
-		{{subTemplate "article-param-block" params=article.success _title="Success (200)" _hasType=_hasTypeInSuccessFields}}
-		{{subTemplate "article-param-block" params=article.info _title="Info" _hasType=_hasTypeInInfoFields}}
-		{{subTemplate "article-param-block" params=article.error _title="Error (4xx)" _col1="Name" _hasType=_hasTypeInErrorFields}}
+		{{subTemplate "article-param-block" params=article.parameter _hasType=_hasTypeInParameterFields}}
+		{{subTemplate "article-param-block" params=article.success _hasType=_hasTypeInSuccessFields}}
+		{{subTemplate "article-param-block" params=article.info _hasType=_hasTypeInInfoFields}}
+		{{subTemplate "article-param-block" params=article.error _col1="Name" _hasType=_hasTypeInErrorFields}}
 	</article>
 </script>
 
 <script id="template-article-param-block" type="text/x-handlebars-template">
 	{{#if params}}
-		<h2>{{__ _title}}</h2>
-		{{#if params.fields}}
+		{{#each params.fields}}
+			<h2>{{__ @key}}</h2>
 			<table>
 				<thead>
 					<tr>
 						<th style="width: 30%">{{#if _col1}}{{__ _col1}}{{else}}{{__ "Field"}}{{/if}}</th>
-						{{#if _hasType}}<th style="width: 10%">{{__ "Type"}}</th>{{/if}}
+						{{#if ../../_hasType}}<th style="width: 10%">{{__ "Type"}}</th>{{/if}}
 						<th style="width: {{#if _hasType}}60%{{else}}70%{{/if}}">{{__ "Description"}}</th>
 					</tr>
 				</thead>
 				<tbody>
-			{{#each params.fields}}
+			{{#each this}}
 					<tr>
 						<td class="code">{{{splitFill field "." "&nbsp;&nbsp;"}}}{{#if optional}} <span class="label label-optional">{{__ "optional"}}</span>{{/if}}</td>
 						{{#if ../../_hasType}}<td>{{{type}}}</td>{{/if}}
-						<td>{{{nl2br description}}}</td>
+					<td>
+					  {{{nl2br description}}}
+						{{#if defaultValue}}<p class="default-value">{{__ "Default value:"}} <code>{{{defaultValue}}}</code></p>{{/if}}
+					</td>
 					</tr>
 			{{/each}}
 				</tbody>
 			</table>
-		{{else}}
-			<p>{{__ "No response values."}}</p>
-		{{/if}}
 
-		{{#each params.examples}}
-			<strong>{{title}}</strong>
-			<pre class="prettyprint language-json" data-type="json"><code>{{{content}}}</code></pre>
+			{{#each params.examples}}
+				<strong>{{title}}</strong>
+				<pre class="prettyprint language-json" data-type="json"><code>{{{content}}}</code></pre>
+			{{/each}}
 		{{/each}}
 	{{/if}}
 </script>
@@ -216,10 +217,10 @@
 
 		{{/each_compare_title}}
 
-		{{subTemplate "article-compare-param-block" source=article.parameter compare=compare.parameter _title="Parameter" _hasType=_hasTypeInParameterFields}}
-		{{subTemplate "article-compare-param-block" source=article.success compare=compare.success _title="Success (200)" _hasType=_hasTypeInSuccessFields}}
-		{{subTemplate "article-compare-param-block" source=article.info compare=compare.info _title="Info" _hasType=_hasTypeInInfoFields}}
-		{{subTemplate "article-compare-param-block" source=article.error compare=compare.error _title="Error (4xx)" _col1="Name" _hasType=_hasTypeInErrorFields}}
+		{{subTemplate "article-compare-param-block" source=article.parameter compare=compare.parameter _hasType=_hasTypeInParameterFields}}
+		{{subTemplate "article-compare-param-block" source=article.success compare=compare.success _hasType=_hasTypeInSuccessFields}}
+		{{subTemplate "article-compare-param-block" source=article.info compare=compare.info _hasType=_hasTypeInInfoFields}}
+		{{subTemplate "article-compare-param-block" source=article.error compare=compare.error _col1="Name" _hasType=_hasTypeInErrorFields}}
 	</article>
 </script>
 
@@ -304,20 +305,74 @@
 
 <script id="template-article-compare-param-block" type="text/x-handlebars-template">
 	{{#if source}}
-		<h2>{{__ _title}}</h2>
+		{{#each_compare_keys source.fields compare.fields}}
+			{{#if typeSame}}
+				<h2>{{__ source.key}}</h2>
+				<table>
+				<thead>
+					<tr>
+						<th style="width: 30%">{{#if _col1}}{{__ _col1}}{{else}}{{__ "Field"}}{{/if}}</th>
+						{{#if ../../_hasType}}<th style="width: 10%">{{__ "Type"}}</th>{{/if}}
+						<th style="width: {{#if _hasType}}60%{{else}}70%{{/if}}">{{__ "Description"}}</th>
+					</tr>
+				</thead>
+				{{subTemplate "article-compare-param-block-body" source=source.value compare=compare.value _hasType=../../_hasType}}
+				</table>
+			{{/if}}
 
-		<table>
-			<thead>
-				<tr>
-					<th style="width: 30%">{{#if _col1}}{{__ _col1}}{{else}}{{__ "Field"}}{{/if}}</th>
-					{{#if _hasType}}<th style="width: 10%">{{__ "Type"}}</th>{{/if}}
-					<th style="width: {{#if _hasType}}60%{{else}}70%{{/if}}">{{__ "Description"}}</th>
-				</tr>
-			</thead>
+			{{#if typeIns}}
+				<h2><ins>{{__ source.key}}</ins></h2>
+				<table class="ins">
+				<thead>
+					<tr>
+						<th style="width: 30%">{{#if _col1}}{{__ _col1}}{{else}}{{__ "Field"}}{{/if}}</th>
+						{{#if ../../_hasType}}<th style="width: 10%">{{__ "Type"}}</th>{{/if}}
+						<th style="width: {{#if _hasType}}60%{{else}}70%{{/if}}">{{__ "Description"}}</th>
+					</tr>
+				</thead>
+				{{subTemplate "article-compare-param-block-body" source=source.value compare=source.value _hasType=../../_hasType}}
+				</table>
+			{{/if}}
 
-			<tbody>
-		{{#each_compare_field source.fields compare.fields}}
+			{{#if typeDel}}
+				<h2><del>{{__ compare.key}}</del></h2>
+				<table class="del">
+				<thead>
+					<tr>
+						<th style="width: 30%">{{#if _col1}}{{__ _col1}}{{else}}{{__ "Field"}}{{/if}}</th>
+						{{#if ../../_hasType}}<th style="width: 10%">{{__ "Type"}}</th>{{/if}}
+						<th style="width: {{#if _hasType}}60%{{else}}70%{{/if}}">{{__ "Description"}}</th>
+					</tr>
+				</thead>
+				{{subTemplate "article-compare-param-block-body" source=compare.value compare=compare.value _hasType=../../_hasType}}
+				</table>
+			{{/if}}
 
+			{{#each_compare_title source.examples compare.examples}}
+
+				{{#if typeSame}}
+				<strong>{{{showDiff source.title compare.title}}}</strong>
+				<pre class="prettyprint language-json" data-type="json"><code>{{{showDiff source.content compare.content}}}</code></pre>
+				{{/if}}
+
+				{{#if typeIns}}
+				<strong><ins>{{{source.title}}}</ins></strong>
+				<pre class="ins prettyprint language-json" data-type="json"><code>{{{source.content}}}</code></pre>
+				{{/if}}
+
+				{{#if typeDel}}
+				<strong><del>{{{compare.title}}}</del></strong>
+				<pre class="del prettyprint language-json" data-type="json"><code>{{{compare.content}}}</code></pre>
+				{{/if}}
+
+			{{/each_compare_title}}
+  	{{/each_compare_keys}}
+	{{/if}}
+</script>
+
+<script id="template-article-compare-param-block-body" type="text/x-handlebars-template">
+	<tbody>
+		{{#each_compare_field source compare}}
 			{{#if typeSame}}
 				<tr>
 					<td class="code">
@@ -341,12 +396,13 @@
 					{{#if compare.type}}
 					<td>{{{compare.type}}}</td>
 					{{else}}
-						{{#if ../../_hasType}}<td></td>{{/if}}
+						{{#if ../../../../_hasType}}<td></td>{{/if}}
 					{{/if}}
-
 				{{/if}}
-
-					<td>{{{showDiff source.description compare.description "nl2br"}}}</td>
+					<td>
+						{{{showDiff source.description compare.description "nl2br"}}}
+						{{#if source.defaultValue}}<p class="default-value">{{__ "Default value:"}} <code>{{{showDiff source.defaultValue compare.defaultValue}}}</code><p>{{/if}}
+					</td>
 				</tr>
 			{{/if}}
 
@@ -363,7 +419,10 @@
 					{{{typRowTd}}}
 				{{/if}}
 
-					<td>{{{nl2br source.description}}}</td>
+					<td>
+						{{{nl2br source.description}}}
+						{{#if source.defaultValue}}<p class="default-value">{{__ "Default value:"}} <code>{{{source.defaultValue}}}</code><p>{{/if}}
+					</td>
 				</tr>
 			{{/if}}
 
@@ -380,34 +439,15 @@
 					{{{typRowTd}}}
 				{{/if}}
 
-					<td>{{{nl2br compare.description}}}</td>
+					<td>
+						{{{nl2br compare.description}}}
+						{{#if compare.defaultValue}}<p class="default-value">{{__ "Default value:"}} <code>{{{compare.defaultValue}}}</code><p>{{/if}}
+					</td>
 				</tr>
 			{{/if}}
 
 		{{/each_compare_field}}
-			</tbody>
-		</table>
-
-		{{#each_compare_title source.examples compare.examples}}
-
-
-			{{#if typeSame}}
-			<strong>{{{showDiff source.title compare.title}}}</strong>
-			<pre class="prettyprint language-json" data-type="json"><code>{{{showDiff source.content compare.content}}}</code></pre>
-			{{/if}}
-
-			{{#if typeIns}}
-			<strong><ins>{{{source.title}}}</ins></strong>
-			<pre class="ins prettyprint language-json" data-type="json"><code>{{{source.content}}}</code></pre>
-			{{/if}}
-
-			{{#if typeDel}}
-			<strong><del>{{{compare.title}}}</del></strong>
-			<pre class="del prettyprint language-json" data-type="json"><code>{{{compare.content}}}</code></pre>
-			{{/if}}
-
-		{{/each_compare_title}}
-	{{/if}}
+	</tbody>
 </script>
 
 <div class="container-fluid">
