--- a/template/index.html
+++ b/template/index.html
@@ -7,7 +7,7 @@
   <link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:400,600,700" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="vendor/prettify.css" rel="stylesheet" media="screen">
-  <link href="css/style.css" rel="stylesheet" media="screen">
+  <link href="css/style.css" rel="stylesheet" media="screen, print">
   <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
@@ -460,9 +460,7 @@
 
 <div class="container-fluid">
   <div class="row-fluid">
-    <div class="span2">
-      <div id="sidenav"></div>
-    </div>
+    <div id="sidenav" class="span2"></div>
     <div id="content">
       <div id="project"></div>
       <div id="header"></div>
