Add polyfills for IE8 compatibility.

--- a/template/index.html
+++ b/template/index.html
@@ -9,6 +9,7 @@
   <link href="vendor/prettify.css" rel="stylesheet" media="screen">
   <link href="css/style.css" rel="stylesheet" media="screen, print">
   <link href="img/favicon.ico" rel="icon" type="image/x-icon">
+  <script src="vendor/polyfill.js"></script>
 </head>
 <body>
 
