Add basic template configuration options.

--- a/template/index.html
+++ b/template/index.html
@@ -34,6 +34,7 @@
     <h1>{{name}}</h1>
     {{#if description}}<h2>{{{nl2br description}}}</h2>{{/if}}
   </div>
+  {{#if template.withCompare}}
   <div class="pull-right">
     <div class="btn-group">
       <button id="version" class="btn btn-large dropdown-toggle" data-toggle="dropdown">
@@ -49,6 +50,7 @@
       </ul>
     </div>
   </div>
+  {{/if}}
   <div class="clearfix"></div>
 </script>
 
@@ -65,8 +67,10 @@
 </script>
 
 <script id="template-generator" type="text/x-handlebars-template">
-  {{#if generator}}
-    {{__ "Generated with"}} <a href="http://apidocjs.com">apiDoc</a> {{{generator.version}}} - {{{generator.time}}}
+  {{#if template.withGenerator}}
+    {{#if generator}}
+      {{__ "Generated with"}} <a href="http://apidocjs.com">apiDoc</a> {{{generator.version}}} - {{{generator.time}}}
+    {{/if}}
   {{/if}}
 </script>
 
@@ -89,6 +93,7 @@
     <div class="pull-left">
       <h1>{{underscoreToSpace article.group}} - {{article.title}}</h1>
     </div>
+    {{#if template.withCompare}}
     <div class="pull-right">
       <div class="btn-group">
         <button class="version btn dropdown-toggle" data-toggle="dropdown">
@@ -102,6 +107,7 @@
         </ul>
       </div>
     </div>
+    {{/if}}
     <div class="clearfix"></div>
 
     {{#if article.description}}
