Fixed bug where dropdown opens off of page.

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -120,6 +120,11 @@ td {
   float: right;
 }
 
+.open-left {
+  right: 0;
+  left: auto;
+}
+
 /* ------------------------------------------------------------------------------------------
  * apidoc - intro
  * ------------------------------------------------------------------------------------------ */
