Added function to clear sample request data.

--- a/template/index.html
+++ b/template/index.html
@@ -169,7 +169,7 @@
       <div id="sample-response-{{article.name}}" style="display: none;">
         <h3 style="margin-top: 10px">
           Response
-          <span class="pull-right" onclick="clearResponse()">
+          <span class="pull-right" onclick="clearResponse('{{article.name}}')">
             Clear
           </span>
         </h3>
