Fixed incorrect nav id.

--- a/template/index.html
+++ b/template/index.html
@@ -15,7 +15,7 @@
 <body data-spy="scroll" data-target="#scrollingNav" data-offset="25">
 
 <script id="template-sidenav" type="text/x-handlebars-template">
-<nav id="#scrollingNav">
+<nav id="scrollingNav">
   <ul class="sidenav nav nav-list">
   {{#each nav}}
     {{#if title}}
