--- a/template/index.html
+++ b/template/index.html
@@ -173,7 +173,7 @@
       <div id="sample-response-{{article.name}}" style="display: none;">
         <h3 style="margin-top: 10px">
           Response
-          <span class="pull-right" onclick="clearResponse('{{article.name}}')">
+          <span class="pull-right" onclick="clearSampleRequest('{{article.name}}')">
             Clear
           </span>
         </h3>
